Slides and Video Fonts Increased Weights

--- a/StarmeterSparkLog.ipynb
+++ b/StarmeterSparkLog.ipynb
@@ -2,6 +2,48 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <iframe\n",
+       "            width=\"100%\"\n",
+       "            height=\"1200px\"\n",
+       "            src=\"http://localhost:8050\"\n",
+       "            frameborder=\"0\"\n",
+       "            allowfullscreen\n",
+       "            \n",
+       "        ></iframe>\n",
+       "        "
+      ],
+      "text/plain": [
+       "<IPython.lib.display.IFrame at 0x133944b30>"
+      ]
+     },
+     "execution_count": 84,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    }
+   ],
+   "source": [
+    "from IPython.display import IFrame\n",
+    "\n",
+    "# Display Dash app in an IFrame\n",
+    "IFrame(src='http://localhost:8050', width='100%', height='1200px')  # Adjust the height as needed"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 81,
    "metadata": {
     "scrolled": true
