Video of Pipeline

--- a/StarmeterSparkLog.ipynb
+++ b/StarmeterSparkLog.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -20,19 +20,12 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x133944b30>"
+       "<IPython.lib.display.IFrame at 0x11f944530>"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                                                \r"
-     ]
     }
    ],
    "source": [
@@ -44,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 19,
    "metadata": {
     "scrolled": true
    },
@@ -64,7 +57,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x132efea20>"
+       "<IPython.lib.display.IFrame at 0x11f7f2840>"
       ]
      },
      "metadata": {},
@@ -131,7 +124,7 @@
     "    # Convert to Pandas DataFrame and select necessary columns\n",
     "    pdf = df.select(\"event_date\", \"celebrity\", \"event_description\", \"current_fan_count\") \\\n",
     "        .orderBy(F.desc(\"event_date\")) \\\n",
-    "        .limit(6) \\\n",
+    "        .limit(11) \\\n",
     "        .toPandas()\n",
     "    \n",
     "    # Sort by date in descending order\n",
@@ -144,7 +137,7 @@
     "    pdf['percent_change'] = (pdf['fan_count_change'] / pdf['current_fan_count'].shift(-1)) * 100\n",
     "    \n",
     "    # Detect anomalies (changes >= 15%)\n",
-    "    pdf['is_anomaly'] = np.abs(pdf['percent_change']) >= 15\n",
+    "    pdf['is_anomaly'] = np.abs(pdf['percent_change']) >= 20\n",
     "    \n",
     "    # Remove the extra row we used for calculation\n",
     "    pdf = pdf.iloc[:-1]\n",
@@ -242,7 +235,7 @@
     "    ]),\n",
     "    # Bar chart\n",
     "    dbc.Row([\n",
-    "        dbc.Col(dcc.Graph(id='bar-chart'), width=6)\n",
+    "        dbc.Col(dcc.Graph(id='bar-chart'), width=6),\n",
     "    ]),\n",
     "    \n",
     "    dcc.Interval(\n",
@@ -390,18 +383,42 @@
     "                # ),\n",
     "                xaxis_title='Celebrity',\n",
     "                yaxis_title='Current Fans',\n",
-    "                yaxis=dict(range=[0, (total_fans/2)-1000]),  # Set range based on total fans\n",
     "                margin=dict(l=40, r=40, t=40, b=20),  # Adjust margins to fit the layout\n",
     "                autosize=True,\n",
     "                width=500,  # Set the desired width\n",
     "                height=400,  # Set the desired height\n",
     "                showlegend=False,\n",
+    "                font=dict(size=20),  # Set the default font size for all text elements\n",
+    "                xaxis=dict(\n",
+    "                    title_font=dict(size=20),  # Increase the font size of the x-axis title\n",
+    "                    tickfont=dict(size=17),    # Increase the font size of the x-axis ticks\n",
+    "                ),\n",
+    "                yaxis=dict(\n",
+    "                    title_font=dict(size=20),  # Increase the font size of the y-axis title\n",
+    "                    tickfont=dict(size=17),    # Increase the font size of the y-axis ticks\n",
+    "                    range=[0, (total_fans / 2) - 1000]  # Adjust y-axis range if needed\n",
+    "                ),\n",
     "                modebar=dict(\n",
     "                    remove=['zoom', 'pan', 'select', 'zoomIn', 'zoomOut', 'autoScale', 'resetScale2d', 'lasso2d', 'zoom2d', 'resetScale', 'toImage', 'plotly_logo']\n",
     "                )\n",
     "            )\n",
     "            bar_fig.update_xaxes(tickangle=-45)  # Rotate x-axis labels if needed\n",
     "\n",
+    "            # Create pie chart\n",
+    "            pie_fig = go.Figure(data=[\n",
+    "                go.Pie(\n",
+    "                    labels=list(fan_counts_data.keys()),  # Use the names of celebrities as labels\n",
+    "                    values=current_fan_counts,  # Use the current fan counts as values\n",
+    "                    marker=dict(colors=colors),  # Match the colors with the bar chart\n",
+    "                    hole=0.3,  # Optional: adjust for a donut-style chart if desired\n",
+    "                    textinfo='label+percent',  # Show labels and percentages on the pie slices\n",
+    "                    textfont=dict(size=18)  # Adjust text size for better readability\n",
+    "                )\n",
+    "            ])\n",
+    "        \n",
+    "\n",
+    "        \n",
+    "        \n",
     "        else:\n",
     "            line_fig = go.Figure().update_layout(\n",
     "                title='No data available',\n",
@@ -444,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
