--- a/StarmeterSparkLog.ipynb
+++ b/StarmeterSparkLog.ipynb
@@ -9,9 +9,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "24/09/09 09:22:39 WARN Utils: Your hostname, Zipcoders-MacBook-Pro.local resolves to a loopback address: 127.0.0.1; using 192.168.3.252 instead (on interface en0)\n",
-      "24/09/09 09:22:39 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n",
-      "24/09/09 09:22:40 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
+      "24/09/10 07:51:25 WARN Utils: Your hostname, Zipcoders-MacBook-Pro.local resolves to a loopback address: 127.0.0.1; using 192.168.8.163 instead (on interface en0)\n",
+      "24/09/10 07:51:25 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n",
+      "24/09/10 07:51:25 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
       "Setting default log level to \"WARN\".\n",
       "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n"
      ]
@@ -31,7 +31,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x12a7f4c20>"
+       "<IPython.lib.display.IFrame at 0x1328b00e0>"
       ]
      },
      "metadata": {},
@@ -66,7 +66,7 @@
     "            .option(\"url\", \"jdbc:mysql://127.0.0.1:3306/starmeter\") \\\n",
     "            .option(\"dbtable\", \"user_dynamic_preferences\") \\\n",
     "            .option(\"user\", \"timlinkous\") \\\n",
-    "            .option(\"password\", \"zipcode1\") \\\n",
+    "            .option(\"password\", \"mypass\") \\\n",
     "            .option(\"driver\", \"com.mysql.cj.jdbc.Driver\") \\\n",
     "            .load()\n",
     "\n",
@@ -93,7 +93,7 @@
     "        .option(\"driver\", \"com.mysql.cj.jdbc.Driver\") \\\n",
     "        .option(\"dbtable\", \"event_log\") \\\n",
     "        .option(\"user\", \"timlinkous\") \\\n",
-    "        .option(\"password\", \"zipcode1\") \\\n",
+    "        .option(\"password\", \"mypass\") \\\n",
     "        .load()\n",
     "\n",
     "    # Convert to Pandas DataFrame and select necessary columns\n",
@@ -372,47 +372,29 @@
     "        return False, 'Stop'  # enabled, show 'Stop' button text\n",
     "\n",
     "if __name__ == '__main__':\n",
-    "    app.run_server(debug=True)\n",
-    " \n",
-    " "
+    "    app.run_server(debug=True) "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'spark' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mspark\u001b[49m\u001b[38;5;241m.\u001b[39mstop()\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'spark' is not defined"
+     ]
+    }
+   ],
    "source": [
     "spark.stop()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
